<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/LogOut"
        android:title="Log ud"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>