<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/mandatorytoolbar"
        layout="@layout/mandatorytoolbar" />

    <TextView
        android:id="@+id/MessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="UserReservationButtonClicked"
        android:text="Se dine reservationer" />

    <ListView
        android:id="@+id/JsonsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>