...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/FromDateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="FromDatePickButtonClicked"
            android:text="Dato" />

...
        android:hint="Undervisning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ReserveRoomButton"
        android:text="Reserver lokale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ReserveRoomButtonClicked"/>

</LinearLayout>
